---
title: The state transition diagram of the implemented automaton
---
stateDiagram-v2
    [*] --> S00_START:::majorElement



    S00_START --> S01_MAJOR_STARTS_WITH_ZERO:::majorElement : ZERO_DIGIT
    S00_START --> S02_MAJOR_STARTS_WITH_POSITIVE_DIGIT:::majorElement : POSITIVE_DIGIT
    S00_START --> ERROR_MAJOR_VERSION : END_OF_INPUT
    S00_START --> ERROR_MAJOR_VERSION : !(DIGIT)

    S01_MAJOR_STARTS_WITH_ZERO --> S03_DOT_AFTER_MAJOR_NUMBER : DOT
    S01_MAJOR_STARTS_WITH_ZERO --> ERROR_MAJOR_VERSION : !(DOT)

    S02_MAJOR_STARTS_WITH_POSITIVE_DIGIT --> S02_MAJOR_STARTS_WITH_POSITIVE_DIGIT : DIGIT
    S02_MAJOR_STARTS_WITH_POSITIVE_DIGIT --> S03_DOT_AFTER_MAJOR_NUMBER:::separatorElement : DOT
    S02_MAJOR_STARTS_WITH_POSITIVE_DIGIT --> ERROR_MINOR_VERSION : !(DOT, DIGIT)

    S03_DOT_AFTER_MAJOR_NUMBER --> S05_MINOR_STARTS_WITH_POSITIVE_DIGIT:::minorElement : POSITIVE_DIGIT
    S03_DOT_AFTER_MAJOR_NUMBER --> S04_MINOR_STARTS_WITH_ZERO:::minorElement : ZERO_DIGIT
    S03_DOT_AFTER_MAJOR_NUMBER --> ERROR_MINOR_VERSION : !(DIGIT)

    S04_MINOR_STARTS_WITH_ZERO --> S06_DOT_AFTER_MINOR_NUMBER:::separatorElement : DOT
    S04_MINOR_STARTS_WITH_ZERO --> ERROR_MINOR_VERSION : !(DOT)
    S04_MINOR_STARTS_WITH_ZERO --> ERROR_MINOR_VERSION : !(DIGIT)

    S05_MINOR_STARTS_WITH_POSITIVE_DIGIT --> S06_DOT_AFTER_MINOR_NUMBER:::separatorElement : DOT
    S05_MINOR_STARTS_WITH_POSITIVE_DIGIT --> S05_MINOR_STARTS_WITH_POSITIVE_DIGIT : DIGIT
    S05_MINOR_STARTS_WITH_POSITIVE_DIGIT --> ERROR_MINOR_VERSION : !(DOT, DIGIT)

    S06_DOT_AFTER_MINOR_NUMBER --> S08_PATCH_STARTS_WITH_ZERO:::patchElement : ZERO_DIGIT
    S06_DOT_AFTER_MINOR_NUMBER --> S07_PATCH_STARTS_WITH_POSITIVE_DIGIT:::patchElement : POSITIVE_DIGIT
    S06_DOT_AFTER_MINOR_NUMBER --> ERROR_PATCH_NUMBER : END_OF_INPUT
    S06_DOT_AFTER_MINOR_NUMBER --> ERROR_PATCH_NUMBER : !(DIGIT)

    S07_PATCH_STARTS_WITH_POSITIVE_DIGIT --> END_OF_SEMVER:::endOfSemver : END_OF_INPUT
    S07_PATCH_STARTS_WITH_POSITIVE_DIGIT --> S07_PATCH_STARTS_WITH_POSITIVE_DIGIT : DIGIT
    S07_PATCH_STARTS_WITH_POSITIVE_DIGIT --> S09_AFTER_HYPHEN_BEFORE_PRERELEASE : HYPHEN
    S07_PATCH_STARTS_WITH_POSITIVE_DIGIT --> S16_AFTER_PLUS_BEFORE_BUILD:::separatorElement : PLUS
    S07_PATCH_STARTS_WITH_POSITIVE_DIGIT --> ERROR_PATCH_NUMBER : !(PLUS, DIGIT, HYPHEN)

    S08_PATCH_STARTS_WITH_ZERO --> ERROR_PATCH_NUMBER : !(END_OF_INPUT, PLUS, HYPHEN)
    S08_PATCH_STARTS_WITH_ZERO --> END_OF_SEMVER : END_OF_INPUT
    S08_PATCH_STARTS_WITH_ZERO --> ERROR_PATCH_NUMBER : DIGIT
    S08_PATCH_STARTS_WITH_ZERO --> S09_AFTER_HYPHEN_BEFORE_PRERELEASE:::separatorElement : HYPHEN
    S08_PATCH_STARTS_WITH_ZERO --> S16_AFTER_PLUS_BEFORE_BUILD : PLUS

    S09_AFTER_HYPHEN_BEFORE_PRERELEASE --> S12_PRERELEASE_AFTER_ALPHA:::prereleaseElement : ALPHA
    S09_AFTER_HYPHEN_BEFORE_PRERELEASE --> S13_PRERELEASE_AFTER_ZERO:::prereleaseElement : ZERO_DIGIT
    S09_AFTER_HYPHEN_BEFORE_PRERELEASE --> S11_PRERELEASE_AFTER_POSITIVE_DIGIT:::prereleaseElement : POSITIVE_DIGIT
    S09_AFTER_HYPHEN_BEFORE_PRERELEASE --> ERROR_PRERELEASE : END_OF_INPUT
    S09_AFTER_HYPHEN_BEFORE_PRERELEASE --> ERROR_PRERELEASE : !(ALPHA, ZERO_DIGIT, POSITIVE_DIGIT)

    S11_PRERELEASE_AFTER_POSITIVE_DIGIT --> ERROR_PRERELEASE : !(END_OF_INPUT, PLUS, ALPHANUM, DOT)
    S11_PRERELEASE_AFTER_POSITIVE_DIGIT --> END_OF_SEMVER : END_OF_INPUT
    S11_PRERELEASE_AFTER_POSITIVE_DIGIT --> S11_PRERELEASE_AFTER_POSITIVE_DIGIT : ALPHANUM
    S11_PRERELEASE_AFTER_POSITIVE_DIGIT --> S14_PRERELEASE_AFTER_DOT : DOT
    S11_PRERELEASE_AFTER_POSITIVE_DIGIT --> S16_AFTER_PLUS_BEFORE_BUILD : PLUS

    S12_PRERELEASE_AFTER_ALPHA --> ERROR_PRERELEASE : !(ALPHA, DOT, PLUS)
    S12_PRERELEASE_AFTER_ALPHA --> END_OF_SEMVER : END_OF_INPUT
    S12_PRERELEASE_AFTER_ALPHA --> S12_PRERELEASE_AFTER_ALPHA : ALPHANUM
    S12_PRERELEASE_AFTER_ALPHA --> S14_PRERELEASE_AFTER_DOT : DOT
    S12_PRERELEASE_AFTER_ALPHA --> S16_AFTER_PLUS_BEFORE_BUILD : PLUS

    S13_PRERELEASE_AFTER_ZERO --> END_OF_SEMVER : END_OF_INPUT
    S13_PRERELEASE_AFTER_ZERO --> S14_PRERELEASE_AFTER_DOT:::prereleaseElement : DOT
    S13_PRERELEASE_AFTER_ZERO --> S15_PRERELEASE_DIGIT_LOOP:::prereleaseElement : DIGIT
    S13_PRERELEASE_AFTER_ZERO --> S12_PRERELEASE_AFTER_ALPHA:::prereleaseElement : ALPHA
    S13_PRERELEASE_AFTER_ZERO --> S16_AFTER_PLUS_BEFORE_BUILD : PLUS
    S13_PRERELEASE_AFTER_ZERO --> ERROR_PRERELEASE : !(ALPHA, DIGIT, DOT, PLUS)

    S14_PRERELEASE_AFTER_DOT --> S11_PRERELEASE_AFTER_POSITIVE_DIGIT : POSITIVE_DIGIT
    S14_PRERELEASE_AFTER_DOT --> S13_PRERELEASE_AFTER_ZERO : ZERO_DIGIT
    S14_PRERELEASE_AFTER_DOT --> S12_PRERELEASE_AFTER_ALPHA : ALPHA
    S14_PRERELEASE_AFTER_DOT --> ERROR_PRERELEASE : END_OF_INPUT
    S14_PRERELEASE_AFTER_DOT --> ERROR_PRERELEASE : DOT

    S15_PRERELEASE_DIGIT_LOOP --> S15_PRERELEASE_DIGIT_LOOP : ZERO_DIGIT
    S15_PRERELEASE_DIGIT_LOOP --> S15_PRERELEASE_DIGIT_LOOP : POSITIVE_DIGIT
    S15_PRERELEASE_DIGIT_LOOP --> S12_PRERELEASE_AFTER_ALPHA : ALPHA
    S15_PRERELEASE_DIGIT_LOOP --> ERROR_PRERELEASE : END_OF_INPUT
    S15_PRERELEASE_DIGIT_LOOP --> ERROR_PRERELEASE : !(ZERO_DIGIT, ALPHA, END_OF_INPUT)

    S16_AFTER_PLUS_BEFORE_BUILD --> ERROR_BUILD : END_OF_INPUT
    S16_AFTER_PLUS_BEFORE_BUILD --> S17_BUILD_AFTER_ALPHANUM:::buildElement : ALPHANUM
    S16_AFTER_PLUS_BEFORE_BUILD --> ERROR_BUILD : !(ALPHANUM)

    S17_BUILD_AFTER_ALPHANUM --> END_OF_SEMVER : END_OF_INPUT
    S17_BUILD_AFTER_ALPHANUM --> S17_BUILD_AFTER_ALPHANUM:::buildElement : ALPHANUM
    S17_BUILD_AFTER_ALPHANUM --> S18_BUILD_DOT_IN_BUILD:::buildElement : DOT
    S17_BUILD_AFTER_ALPHANUM --> ERROR_BUILD : !(ALPHANUM, DOT)

    S18_BUILD_DOT_IN_BUILD --> S17_BUILD_AFTER_ALPHANUM : ALPHANUM
    S18_BUILD_DOT_IN_BUILD --> ERROR_BUILD : END_OF_INPUT
    S18_BUILD_DOT_IN_BUILD --> ERROR_BUILD : DOT

    ERROR_PRERELEASE:::errorElement --> [*]
    ERROR_BUILD:::errorElement --> [*]
    ERROR_PATCH_NUMBER:::errorElement --> [*]
    ERROR_MAJOR_VERSION:::errorElement --> [*]
    ERROR_MINOR_VERSION:::errorElement --> [*]
    ERROR_BUILD:::errorElement --> [*]
    END_OF_SEMVER --> [*]




    classDef majorElement fill:#32a893
    classDef minorElement fill:#84e0d0
    classDef patchElement fill:#b5f5e9
    classDef prereleaseElement fill:#8687e3
    classDef buildElement fill:#03b6fc
    classDef separatorElement fill:#ccc
    classDef errorElement fill:#f00
    classDef endOfSemver fill:#41b019
